2008-09-09  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in src/syscfg.h:  Try to discover and define a safe 32-bit
	data type GP_UINT32_T.

	* term/cairo.trm:
	Fix cairopng_do_crop to use GP_UINT32_T, and bail out cleanly if it was
	not defined correctly.
	Terminal options were overwriting each other in the options string.
	Handle cropping of images with transparent background.

2008-09-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graph3d.c (do_3dplot): Fixed MIN => GPMIN.

2008-09-08  Ethan Merritt  <merritt@u.washington.edu>

	* term/win.trm (WIN_set_color) src/win/wgraph.c (drawgraph):
	The win terminal has been drawing spurious lines connecting distinct
	polylines in the input data file, but only in the case of variable
	rgb color or palette z.  I suspect the patch of 2008-06-24 but I am not
	certain.  Try a variant on that patch and also impose more consistent 
	bookkeeping of the current line type.

	* src/parse.h src/parse.c src/set.c (load_tic_user):
	Some set commands, e.g. set xtics, need to distinguish between the 
	first time through an iteration and subsequent times through it.
	Export a counter from parse.h that can be tested for this purpose.

2008-09-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (load_tic_functions): Revert the load_tic_functions change.
	There is a much better way to accomplish this.

	* src/set.c (set_command) src/unset.c (unset_command) docs/gnuplot.doc:
	Add iteration support to the 'set' and 'unset' commands. This turns out
	to be both simpler and more powerful than adding iteration as a special
	case for axis ticks. E.g.:   unset for [i=100:200] label i

2008-09-06  Juergen Wieferink <wieferink@freenet.de>

	* src/term.c (enhanced_recursion):  Add curly braces {} to the list of
	characters that must be escaped in postscript enhanced mode.
	Bug #1968636

2008-09-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (load_tic_functions): Allow axis tick labels to be defined