@@ -1,3 +1,8 @@
+2008-09-10  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/graph3d.c (place_labels3d):  Clip "splot with labels" against
+	plot boundaries in "set view map" mode, for consistency with 2D plots.
+
 2008-09-09  Ethan Merritt  <merritt@u.washington.edu>
 
 	* configure.in src/syscfg.h:  Try to discover and define a safe 32-bit
